--- a/bower.json
+++ b/bower.json
@@ -21,5 +21,8 @@
     "bootstrap": "~3.3.7",
     "lodash": "~4.16.2",
     "angular-ui-router": "^0.2.18"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.5.8"
   }
 }
