--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,9 @@
     "angular-ui-grid": "~3.2.9",
     "bootstrap": "~3.3.7",
     "lodash": "~4.16.2",
-    "angular-ui-router": "^0.2.18"
+    "angular-ui-router": "^0.2.18",
+    "jquery": "~3.1.1",
+    "less": "~2.7.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.8"
