--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-less": "^1.4.0",
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-qunit": "^1.2.0 ",
     "grunt-contrib-uglify": "~0.5.0",
@@ -40,6 +41,7 @@
     "karma-coverage": "^0.5.5",
     "karma-jasmine": "^0.3.8",
     "karma-mocha-reporter": "^2.0.0",
+    "karma-phantomjs-launcher": "^1.0.0",
     "karma-remap-istanbul": "^0.1.0",
     "karma-source-map-support": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.7",
@@ -49,6 +51,7 @@
     "lodash": "4.3.0",
     "ng-annotate-webpack-plugin": "^0.1.2",
     "ng-cache-loader": "0.0.15",
+    "phantomjs": "^1.9.20",
     "pom-parser": "^1.1.1",
     "postcss-loader": "^0.9.1",
     "precss": "^1.4.0",
@@ -59,9 +62,7 @@
     "url-loader": "^0.5.7",
     "webpack": "1.12.14",
     "webpack-dev-server": "^1.14.1",
-    "webpack-livereload-plugin": "^0.8.1",
-    "phantomjs": "^1.9.20",
-    "karma-phantomjs-launcher": "^1.0.0"
+    "webpack-livereload-plugin": "^0.8.1"
   },
   "scripts": {
     "test": "test"
